AI and formatting fixes

--- a/index.html
+++ b/index.html
@@ -1354,15 +1354,15 @@
                         </div>
                         <div id="chat-pane" class="content-pane terminal-chat" style="display: none;">
                             <div class="terminal-header">
-                                <span class="terminal-title">AI Assistant Terminal</span>
-                                <span class="terminal-subtitle" id="chat-context-display">Type /help for commands</span>
+                                <span class="terminal-title">Chat with Maya</span>
+                                <span class="terminal-subtitle" id="chat-context-display">Your AI writing companion • Type /help for commands</span>
                             </div>
                             <div id="chat-messages" class="terminal-output" style="flex: 1; overflow-y: auto; margin-bottom: 16px;"></div>
                             <div class="terminal-input-area" style="display: flex; align-items: center; gap: 8px;">
                                 <span class="terminal-prompt-line">
-                                    <span class="terminal-user">user@hegel-ai</span><span class="terminal-separator">:</span><span class="terminal-path">~/</span><span class="terminal-dollar">$</span>
+                                    <span class="terminal-user">you</span><span class="terminal-separator">:</span> 
                                 </span>
-                                <input type="text" id="chat-input" class="terminal-input" placeholder="Enter command or message..." style="flex: 1;">
+                                <input type="text" id="chat-input" class="terminal-input" placeholder="Ask Maya anything about your writing..." style="flex: 1;">
                                 <div class="terminal-buttons" style="display: flex; gap: 4px;">
                                     <button id="restart-chat-btn" class="btn btn-small" title="Start new chat session">🔄</button>
                                     <button id="load-editor-to-chat-btn" class="btn btn-small" title="Load current editor content into chat">📝</button>
