--- a/index.html
+++ b/index.html
@@ -1415,7 +1415,7 @@
                         <button id="ai-todo-suggestions-btn" class="toolbar-btn" title="Get AI TODO Suggestions">
                             🤖
                         </button>
-                        <button id="invoke-ash-btn" class="toolbar-btn" title="Invoke Ash (AI Writing Companion) - Ctrl+Shift+A">
+                        <button id="invoke-ash-btn" class="toolbar-btn" title="Invoke Ash (AI Writing Companion) - Cmd+Shift+I">
                             💬
                         </button>
                 </div>
@@ -3340,11 +3340,11 @@ Note: You can press 'N' to toggle these speaker notes on/off during presentation
             // The React component should handle setIsPresenting(false)
           }
           
-          // Ctrl+Shift+A to invoke Ash (AI Writing Companion)
-          if (e.ctrlKey && e.shiftKey && e.key === 'A') {
+          // Cmd+Shift+I to invoke Ash (AI Writing Companion)
+          if ((e.metaKey || e.ctrlKey) && e.shiftKey && e.key === 'I') {
             e.preventDefault();
             if (window.aiCompanion && typeof window.aiCompanion.handleKeyboardInvocation === 'function') {
-              console.log('[Keyboard] Invoking Ash via Ctrl+Shift+A');
+              console.log('[Keyboard] Invoking Ash via Cmd+Shift+I');
               window.aiCompanion.handleKeyboardInvocation();
             } else {
               console.warn('[Keyboard] AI Companion not available for keyboard shortcut');
