--- a/index.html
+++ b/index.html
@@ -1743,7 +1743,11 @@
     <script src="orchestrator/modules/gamification.js" defer></script>
     <script src="orchestrator/modules/collaborative-challenges.js" defer></script>
     <script src="orchestrator/modules/challenges-ui.js" defer></script>
-    <script src="orchestrator/modules/ai-writing-companion.js" defer></script>
+    <!-- AI Writing Companion - Modular Architecture -->
+    <script src="orchestrator/modules/ai-companion/analysis/TextAnalysisEngine.js" defer></script>
+    <script src="orchestrator/modules/ai-companion/context/ContextManager.js" defer></script>
+    <script src="orchestrator/modules/ai-companion/feedback/FeedbackSystem.js" defer></script>
+    <script src="orchestrator/modules/ai-companion/AICompanionManager.js" defer></script>
     <script src="orchestrator/modules/ai-flow-detection.js" defer></script>
     <script src="orchestrator/modules/todo-gamification.js" defer></script>
     <script src="orchestrator/modules/dragdrop.js" defer></script>
