Split AI characters (inline & chat)

--- a/index.html
+++ b/index.html
@@ -1743,6 +1743,8 @@
     <script src="orchestrator/modules/gamification.js" defer></script>
     <script src="orchestrator/modules/collaborative-challenges.js" defer></script>
     <script src="orchestrator/modules/challenges-ui.js" defer></script>
+    <!-- AI Assistant Configuration -->
+    <script src="orchestrator/modules/ai-assistant-config.js" defer></script>
     <!-- AI Writing Companion - Modular Architecture -->
     <script src="orchestrator/modules/ai-companion/analysis/TextAnalysisEngine.js" defer></script>
     <script src="orchestrator/modules/ai-companion/context/ContextManager.js" defer></script>
