--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         worker-src 'self' blob:;
     ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hegel Pedagogy AI - Advanced Editor & Presentations</title>
+    <title>NightOwl - Philosophical Writing & Teaching</title>
     <link rel="icon" type="image/png" href="build/icon.png">
     <link rel="icon" type="image/svg+xml" href="build/icon.svg">
     
