--- a/index.html
+++ b/index.html
@@ -1058,15 +1058,14 @@
             <!-- Presentation Content -->
             <div id="presentation-content" class="content-view" style="display: flex; flex-direction: column; position: relative;">
                 <div id="presentation-root" style="width: 100%; flex: 1; min-height: 0;"></div>
-                <div id="speaker-notes-panel" style="position: absolute; bottom: 0; left: 0; right: 0; height: 180px; background: #2c3e50; color: white; border-top: 3px solid #34495e; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; display: none; z-index: 1000; box-shadow: 0 -2px 10px rgba(0,0,0,0.3); min-height: 80px; max-height: 60vh;">
+                <div id="speaker-notes-panel" style="display: none !important;">
                     <!-- Resize Handle -->
                     <div id="speaker-notes-resize-handle" style="position: absolute; top: 0; left: 0; right: 0; height: 8px; background: #34495e; cursor: ns-resize; border-radius: 4px 4px 0 0; display: flex; align-items: center; justify-content: center;">
                         <div style="width: 40px; height: 3px; background: #7f8c8d; border-radius: 2px;"></div>
                     </div>
                     <!-- Header -->
-                    <div style="display: flex; justify-content: space-between; align-items: center; margin: 16px 16px 8px 16px; padding-top: 8px;">
+                    <div style="margin: 16px 16px 8px 16px; padding-top: 8px;">
                         <h4 style="margin: 0; font-size: 14px; color: #ecf0f1;">📝 Speaker Notes</h4>
-                        <button id="toggle-speaker-notes-panel" style="background: #34495e; color: white; border: none; padding: 4px 8px; border-radius: 4px; cursor: pointer; font-size: 12px;">Hide</button>
                     </div>
                     <!-- Scrollable Content -->
                     <div id="current-slide-notes" style="font-size: 13px; line-height: 1.4; color: #bdc3c7; padding: 0 16px 16px 16px; overflow-y: auto; height: calc(100% - 60px);">
