--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         script-src 'self' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com https://unpkg.com https://cdn.tailwindcss.com 'unsafe-inline';
         style-src 'self' 'unsafe-inline';
         font-src 'self' data:;
-        img-src 'self' data:;
+        img-src 'self' data: https: http:;
         connect-src 'self';
         worker-src 'self' blob:;
     ">
