--- a/index.html
+++ b/index.html
@@ -1079,7 +1079,6 @@
             
             <!-- Network Visualization Content -->
             <div id="network-content" class="content-view" style="display: flex; flex-direction: column; position: relative;">
-                <div id="network-export-controls" style="position: absolute; top: 10px; right: 10px; z-index: 1000;"></div>
                 <div id="network-visualization" style="width: 100%; flex: 1; min-height: 0; background: #f8f9fa;">
                     <div id="network-canvas" style="width: 100%; height: 100%; position: relative;">
                         <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; color: #666;">
@@ -1093,7 +1092,8 @@
                         <div style="margin-bottom: 8px; font-weight: bold;">Network Controls</div>
                         <button id="network-refresh" class="btn" style="margin-right: 5px; padding: 4px 8px; font-size: 11px;">🔄 Refresh</button>
                         <button id="network-center" class="btn" style="margin-right: 5px; padding: 4px 8px; font-size: 11px;">🎯 Center</button>
-                        <button id="network-fit" class="btn" style="padding: 4px 8px; font-size: 11px;">📐 Fit</button>
+                        <button id="network-fit" class="btn" style="margin-right: 5px; padding: 4px 8px; font-size: 11px;">📐 Fit</button>
+                        <button id="network-export" class="btn" style="padding: 4px 8px; font-size: 11px;" onclick="if (window.exportVisualizationAsPNG) window.exportVisualizationAsPNG('network-canvas', 'network')" title="Export as PNG">📸 Export as PNG</button>
                         <div style="margin-top: 8px; font-size: 11px; color: #666;">
                             <div id="network-stats">Files: 0 | Links: 0</div>
                         </div>
