--- a/index.html
+++ b/index.html
@@ -1046,9 +1046,9 @@
                             <div class="wholepart-controls" style="display: flex; justify-content: center; gap: 8px; padding: 8px 12px; border-top: 1px solid #e0e0e0;">
                                 <button id="wholepart-animate" class="btn" style="padding: 4px 12px; font-size: 11px;">▶️ Animate</button>
                                 <button id="wholepart-reset" class="btn" style="padding: 4px 12px; font-size: 11px;">🔄 Reset</button>
+                                <button id="wholepart-export-png" class="btn" style="padding: 4px 12px; font-size: 11px; background: #4CAF50; color: white; border: 1px solid #45a049; display: block; visibility: visible;">📸 Export</button>
                                 <button id="wholepart-zoom-in" class="btn" style="padding: 4px 8px; font-size: 11px;">+</button>
                                 <button id="wholepart-zoom-out" class="btn" style="padding: 4px 8px; font-size: 11px;">-</button>
-                                <button id="wholepart-export-png" class="btn" style="padding: 4px 12px; font-size: 11px; margin-left: 10px; background: #4CAF50; color: white; border: 1px solid #45a049;">📸 Export PNG</button>
                             </div>
                         </div>
                     </div>
