Initial image generation via Google Gemini

--- a/index.html
+++ b/index.html
@@ -1265,7 +1265,7 @@
                                 <span class="terminal-prompt-line">
                                     <span class="terminal-user">you</span><span class="terminal-separator">:</span> 
                                 </span>
-                                <input type="text" id="chat-input" class="terminal-input" placeholder="Ask Ash anything about your writing..." style="flex: 1;">
+                                <input type="text" id="chat-input" class="terminal-input" placeholder="Ask Dr Chen anything about your writing..." style="flex: 1;">
                                 <div class="terminal-buttons" style="display: flex; gap: 4px;">
                                     <button id="attach-image-btn" class="btn btn-small" title="Attach image" onclick="window.handleAttachImage()">📷</button>
                                     <button id="generate-image-btn" class="btn btn-small" title="Generate image with AI" onclick="window.handleGenerateImage()">🎨</button>
