--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
     <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+    
+    <!-- PDF.js for PDF viewing and search -->
+    <script type="module">
+        import * as pdfjsLib from './lib/pdfjs/pdf.min.js';
+        pdfjsLib.GlobalWorkerOptions.workerSrc = './lib/pdfjs/pdf.worker.min.js';
+        window.pdfjsLib = pdfjsLib;
+    </script>
     <!-- D3.js v7.8.5 (local copy) for visualizations and whole/part diagrams -->
     <script src="lib/d3.min.js"></script>
     <!-- Babel no longer needed - using pre-compiled components -->
