Video recording audio presentation

--- a/index.html
+++ b/index.html
@@ -1589,6 +1589,7 @@
     
     <!-- Load JavaScript modules -->
     <script src="services/ttsService.js" defer></script>
+    <script src="services/videoRecordingService.js" defer></script>
     <script src="js/speaker-notes.js" defer></script>
     <script src="js/mode-switcher.js" defer></script>  
     <script src="js/network-visualization.js" defer></script>
