--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="icon" type="image/svg+xml" href="build/icon.svg">
     
     <!-- Styles -->
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="orchestrator/style.css">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/theme.css">
