--- a/index.html
+++ b/index.html
@@ -1464,9 +1464,16 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="zotero-collection">Collection ID (optional)</label>
-                    <input type="text" id="zotero-collection" placeholder="Specific collection ID">
-                    <small style="color: #666;">Leave empty to sync entire library</small>
+                    <label for="zotero-collection">Collection (optional)</label>
+                    <div style="display: flex; gap: 8px; align-items: center;">
+                        <input type="text" id="zotero-collection" placeholder="Collection ID or leave empty for entire library" style="flex: 1;">
+                        <button type="button" id="browse-collections-btn" class="btn" style="white-space: nowrap;">Browse Collections</button>
+                    </div>
+                    <div id="selected-collection-info" style="margin-top: 8px; padding: 8px; background-color: #f0f9ff; border: 1px solid #bae6fd; border-radius: 4px; display: none;">
+                        <div style="font-weight: bold; color: #0369a1;" id="selected-collection-name"></div>
+                        <div style="font-size: 12px; color: #0369a1;" id="selected-collection-items"></div>
+                    </div>
+                    <small style="color: #666;">Leave empty to sync entire library, or click "Browse Collections" to choose</small>
                 </div>
             </div>
             <div class="modal-footer">
@@ -1633,14 +1640,15 @@
                 </div>
                 <div id="citations-pane" class="content-pane citations-panel" style="display: none; height: 100%; padding: 12px; flex-direction: column;">
                     <!-- Citations Panel -->
-                    <div class="citations-header" style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 12px; padding-bottom: 8px; border-bottom: 2px solid #007bff;">
-                        <div style="display: flex; align-items: center; gap: 12px;">
-                            <h3 style="margin: 0; color: #007bff; font-size: 16px;">📚 Citations</h3>
-                            <div id="citations-stats" style="font-size: 11px; color: #666; padding: 2px 6px; background: #f8f9fa; border-radius: 4px;">
-                                <!-- Citation count will be shown here -->
+                    <div class="citations-header" style="display: flex; flex-direction: column; margin-bottom: 12px; padding-bottom: 8px; border-bottom: 2px solid #007bff;">
+                        <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 8px;">
+                            <div style="display: flex; align-items: center; gap: 12px;">
+                                <h3 style="margin: 0; color: #007bff; font-size: 16px;">📚 Citations</h3>
+                                <div id="citations-stats" style="font-size: 11px; color: #666; padding: 2px 6px; background: #f8f9fa; border-radius: 4px;">
+                                    <!-- Citation count will be shown here -->
+                                </div>
                             </div>
-                        </div>
-                        <div class="citation-btn-container">
+                            <div class="citation-btn-container">
                             <!-- Primary Actions -->
                             <button id="add-citation-btn" class="btn citation-btn" style="background: #28a745; color: white;" title="Add New Citation">
                                 <span class="btn-icon">➕</span><span class="btn-label">Add</span>
@@ -1670,6 +1678,16 @@
                             <!-- Utility -->
                             <button id="refresh-citations-btn" class="btn citation-btn" title="Refresh Citations">
                                 <span class="btn-icon">🔃</span><span class="btn-label">Refresh</span>
+                            </button>
+                            </div>
+                        </div>
+                        <!-- Collection Switcher (below buttons) -->
+                        <div id="collection-switcher" style="display: flex; align-items: center; gap: 8px; justify-content: flex-end;">
+                            <select id="quick-collection-selector" style="font-size: 11px; padding: 4px 6px; border: 1px solid #ddd; border-radius: 3px; background: white; min-width: 120px; display: none;">
+                                <option value="">Entire Library</option>
+                            </select>
+                            <button id="refresh-collections-btn" class="btn" style="font-size: 11px; padding: 4px 6px; border: 1px solid #ddd; background: white; display: none;" title="Refresh Collections">
+                                🔄
                             </button>
                         </div>
                     </div>
@@ -2271,5 +2289,36 @@
     <script src="orchestrator/modules/unifiedNetwork.js" defer></script>
     <script src="js/editor-utils.js" defer></script>
     <script src="js/app-init.js" defer></script>
+
+    <!-- Zotero Collections Browser Modal -->
+    <div id="collections-browser-modal-overlay" class="modal-overlay">
+        <div class="modal-content" style="max-width: 600px; max-height: 70vh;">
+            <div class="modal-header">
+                <h3>Browse Zotero Collections</h3>
+                <span class="close" onclick="citationManager.hideModal('collections-browser-modal-overlay')">&times;</span>
+            </div>
+            <div class="modal-body" style="max-height: 400px; overflow-y: auto;">
+                <div id="collections-loading" style="text-align: center; padding: 20px;">
+                    <div class="loading-spinner"></div>
+                    <p>Loading collections...</p>
+                </div>
+                <div id="collections-list" style="display: none;">
+                    <div style="margin-bottom: 10px;">
+                        <button type="button" id="select-entire-library-btn" class="btn" style="width: 100%; text-align: left; padding: 10px;">
+                            📚 <strong>Entire Library</strong>
+                            <div style="font-size: 12px; color: #666; margin-top: 4px;">Sync all items in your library</div>
+                        </button>
+                    </div>
+                    <div id="collections-container"></div>
+                </div>
+                <div id="collections-error" style="display: none; color: #dc3545; padding: 20px; text-align: center;">
+                    <p>Failed to load collections. Please check your credentials and try again.</p>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" onclick="citationManager.hideModal('collections-browser-modal-overlay')" class="btn">Cancel</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
