--- a/index.html
+++ b/index.html
@@ -1829,6 +1829,15 @@
                         <button id="format-code-btn" class="toolbar-btn toolbar-btn-code" title="Inline Code (Ctrl+`)">
                             &lt;&gt;
                         </button>
+                        
+                        <!-- Color Picker Button with Hidden Input -->
+                        <div class="color-picker-container" style="position: relative; display: inline-block;">
+                            <button id="format-color-btn" class="toolbar-btn toolbar-btn-color" title="Text Color">
+                                <span style="color: #FF6B35;">A</span>
+                            </button>
+                            <input type="color" id="color-picker-input" style="position: absolute; opacity: 0; width: 100%; height: 100%; cursor: pointer;" value="#FF6B35">
+                        </div>
+                        
                         <div class="toolbar-separator"></div>
                         <button id="format-h1-btn" class="toolbar-btn toolbar-btn-bold" title="Heading 1">
                             H1
